# PQCat

./: .gitignore  Cargo.toml  README.md
src/: algorithm_runner.rs  code_generator.rs  codes.rs  lib.rs  main.rs  types.rs  utils.rs
src/algorithms/: algorithm_utils.rs  ball_collision.rs  bjmm.rs  config.rs  lee_brickell.rs  metrics.rs  mmt.rs  mod.rs  patterson.rs  prange.rs  stern.rs
src/attacks/: attack_utils.rs  ball_collision.rs  bjmm.rs  lee_brickell.rs  mmt.rs  mod.rs  prange.rs  stern.rs
src/benchmarks/: benchmark_runner.rs  benchmark_utils.rs  config.rs  mod.rs
src/codes/: code_utils.rs  goppa.rs  mod.rs  polynomial_utils.rs
