[package]
name = "pqcat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.16.1"
rand = "0.8.5"
num-bigint = "0.4.6"
clap = { version = "4.5.21", features = ["derive"] }
criterion = "0.5.1"
itertools = "0.13.0"
